2001-05-08  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k32

	* ntpd/ntp_loopfilter.c: rstclock now takes a 3rd argument, the
	last offset.
	(init_loopfilter): Use it.
	(local_clock): Use it.  Clean up the code.
	(loop_config): Use it.
	(rstclock): Implement it.  Clean up the code.
	From Dave Mills.

2001-05-06  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k31

	* ntpdc/ntpdc_ops.c (sysstats): That's 'bad packet format'
	(instead of '... length'), and 'packets rejected' (instead of
	'limitation rejects'.
	* ntpd/ntp_proto.c (receive): PUBKEY fixes.  Move KoD stuff to
	process_packet().
	(process_packet):  Move KoD stuff here... 
	(peer_clear): Unspec the stratum, too.
	(clock_filter): Don't update peer->epoch here.  Fix the filter
	test when checking the epoch.
	(fast_xmit): Send back STRATUM_UNSPEC on a KoD packet.
	(init_proto): Initialize sys_jitter.

	* ntpd/ntp_loopfilter.c: rstclock() takes 2 parameters now.
	(init_loopfilter): Use it...
	(local_clock): Ditto, and change the "mu" calculation.  Improve
	the jitter test in S_SYNC.  Use peer->epoch (not current_time) to
	update the last_time.  Update debug info.
	(rstclock): 2nd arg - the epoch to use.  Use it.
	(loop_config): update call to rstclock.
	From: Dave Mills.

2001-05-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ports/winnt/ntpd/ntpd.dsp: Add cmd_args.c
	From: Wink Saville <wink@saville.com>

2001-04-29  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpq/ntpq.c (tstflags): 11 now.
	From: John Cochran <jdc@fiawol.org>

	* ntpd/ntp_proto.c (receive): KoD updates.  Improve the comments.
	Lose the AM_PROCPKT restrictions test.
	(peer_xmit): Check/report on no encryption key in packet.
	(fast_xmit): Use peer_xmit's new packet length check code.
	From  Dave Mills.

2001-04-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99k30

2001-04-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpdc/ntpdc_ops.c: Added "kod", lost "demobilize".