@@ -1,3 +1,13 @@
+2001-05-09  Harlan Stenn  <stenn@whimsy.udel.edu>
+
+	* ntpd/refclock_shm.c (shm_poll): Apply JAN_1970 correction after
+	calling TVTOTS(), just like everybody else does.
+	From: David Malone <dwmalone@maths.tcd.ie>
+
+	* ntpd/refclock_ulink.c: fixed 33x quality flag, added more
+	debugging stuff, updated 33x time code explanation.
+	From: s.l.smith (via j.c.lang).
+
 2001-05-08  Harlan Stenn  <stenn@whimsy.udel.edu>
 
 	* configure.in: 4.0.99k32
